# pico-setup

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  setup  setup.sh
app/: CmakeLists.txt  build.sh
app/src/: main.c
context-menu/: ucrt64.reg
src/: main.c
